--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,39 +2,60 @@
 import Layout from '../components/Layout.astro';
 ---
 
-<Layout title="Astro Quickstart">
+<Layout title="Resources | 11.17.22 | Sam Kapila">
 	<main>
     <svg id="background" width='1728' height='1235' viewBox="0 0 1728 1235" fill='none' xmlns='http://www.w3.org/2000/svg'><g opacity='0.75' filter='url(#filter0_f_39_143)'><circle cy='1000' r='264' fill='url(#paint0_linear_39_143)'/></g><g opacity='0.65' filter='url(#filter1_f_39_143)'><circle cx='1720' cy='264' r='379' fill='url(#paint1_linear_39_143)'/></g><defs><filter id='filter0_f_39_143' x='-485' y='515' width='970' height='970' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><filter id='filter1_f_39_143' x='1120' y='-336' width='1200' height='1200' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><linearGradient id='paint0_linear_39_143' x1='196.5' y1='902' x2='-2.55853e-05' y2='1264' gradientUnits='userSpaceOnUse'><stop stop-color="var(--bttm-left-blur-1)"/><stop offset='1' stop-color="var(--bttm-left-blur-2)"/></linearGradient><linearGradient id='paint1_linear_39_143' x1='1720' y1='-115' x2='1720' y2='643' gradientUnits='userSpaceOnUse'><stop stop-color="var(--top-right-blur-1)"/><stop offset='1' stop-color="var(--top-right-blur-2)" /></linearGradient></defs></svg>     
-    <div id="content">
-      <div class="header">
-        <h1>Quickstart Template</h1>
+      <header>
+        <h1>Links for Method</h1>
         <div class="logo">
-          <img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1652291187/astro_1_c1yk5a.png" alt="Netlify plus Astro banner">
         </div>
+      </header>
+    <section>
         <h2>
-          This is a bare-bones Astro project that has everything you need to quickly deploy it to Netlify
+         Slides
         </h2>
-        <div class="bttns">
-          <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/astro-quickstart" class="bttn primary">Deploy to Netlify</a>
-          <a href="https://github.com/netlify-templates/astro-quickstart" class="bttn secondary">View Repo</a>
-        </div>
-      </div>
-			<div class="resource-list">
+        <ul class="slides">
+          <li><a href="/Method-Nov2022.pdf">Slides, Nov 2022 on Zoom</a></li>
+        </ul>
+        <h2>
+         Books
+        </h2>
+          <ul>
+            <li>
+              <a href="https://abookapart.com/products/inclusive-design-communities">Inclusive Design Communities by Sameera Kapila </a>
+            </li>
+            <li><a href="https://www.beverlydanieltatum.com/published-works/">Why are All the Black Kids Sitting Together in the Cafeteria</a></li>
+            <li><a href="https://www.amazon.com/Mismatch-Inclusion-Simplicity-Technology-Business/dp/0262539489/ref=asc_df_0262539489/">Mismatch by Kat Holmes</a></li>
+            <li><a href="https://a.co/d/i6qdi5Y">Designing for Belonging by Susie Wise and the Stanford d.school</a></li>
+            <li><a href="https://abookapart.com/products/cross-cultural-design">Cross-Cultural Design by Senongo Apkem</a></li>
+            <li><a href="https://bookshop.org/p/books/do-the-work-an-antiracist-activity-book-w-kamau-bell/15834072?ean=9781523514281">Do the Work by W. Kawau Bell and Kate Schatz</a></li>
+            <li><a href="https://abookapart.com/collections/compassionate-design">The Compassionate Design collection from A Book Apart authors</a></li>
+          </ul>
+
+          <h2>Online resources and training</h2>
+  <ul>
+    <li><a href="https://www.mindtools.com/a0bop9z/the-learning-zone-model">The Learning Zone model</a></li>
+    <li><a href="https://www.storybasedstrategy.org/the4thbox">The 4th Box</a></li>
+    <li><a href="https://righttobe.org/bystander-intervention-training/">Bystander Training by Right to be (The 5 Ds)</a></li>
+    <li><a href="https://samkapila.com/2022/08/13/tv-shows-that-teach-us-more-about-american-history/">Food-related TV shows that teach us about untold American history</a></li>
+  </ul>
+  </section>
+			<div class="contact-list">
         <ul>
           <li>
-            <a href="https://ntl.fyi/38O9wmY">Netlify Blog: Astro posts</a>
+            <a href="https://abookapart.com/products/inclusive-design-communities">Buy Inclusive Design Communities</a>
+          </li>
+          <li>
+            <a href="https://www.samkapila.com/">Website</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/samkap/">LinkedIn</a>
 					</li>
-          <li>
-            <a href="https://ntl.fyi/3KHGtyz">Netlify Docs</a>
-          </li>
-          <li>
-            <a href="https://docs.astro.build/en/getting-started/">Astro Docs</a>
-          </li>
         </ul>
       </div>
       <footer class="footer">
         Made with <a href="https://ntl.fyi/3P0dwBi"><img src="https://res.cloudinary.com/dzkoxrsdj/image/upload/v1646714899/netliheart_ezlkim.svg" alt="Netlify Logo" /></a> for you!
       </footer>
-    </div>
+
 	</main>
 </Layout>
