--- a/src/style/demo-styling.css
+++ b/src/style/demo-styling.css
@@ -15,121 +15,115 @@ html {
     background: var(--color-bg);
     font-family: var(--main-family);
     min-height: 100%;
+    line-height: 1.4;
 }
 
 #background {
     position: fixed;
+    top: 0;
+    bottom: 0;
     width: 100%;
     z-index: -1;
-    height: 100%;
 }
 
-#content {
+section {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
+  max-width: 1000px;
 }
 
-.header{
+section  ul {
+  text-align: left;
+  list-style-type: none;
+  justify-content: center;
+  padding: 2%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  section  ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  section  ul {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.slides {
+    grid-template-columns: repeat(1, 1fr);
+    width: 100%;
     text-align: center;
 }
 
-.header h1 {
+section li {
+  background-color: aliceblue;
+  box-shadow: 0px 0px 4px rgb(188, 188, 188);
+  font-weight: bold;
+  display: block;
+  padding: 2rem;
+}
+
+header {
+    text-align: center;
+}
+
+h1 {
   padding-top:5%;
   margin: 0;
 }
 
-.header .logo img {
-  padding: 30px 0;
-  width: 100%;
+h2 {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 2rem;
 }
 
-.header h2 {
-  line-height: 34px;
-  width: 50%;
-  margin: 0 auto;
-  padding-bottom: 5%;
-  font-weight: 500;
-}
-
-@media only screen and (max-width: 450px) {
-  .header h2 {
-    width: 90%;
-    padding: 5%;
-  }
-}
-
-.bttns{
-  margin-bottom: 5%;
-}
-
-.bttn{
-  padding: 15px;
-  border-radius: 5px;
-  width: 150px;
-  margin: 0 1%;
-  text-decoration: none;
-}
-
-.bttn.primary{
-  display: inline-block;
-  width: max-content;
-  background: #21A69A;
-  border: none;
-  color: white;
-  box-shadow: -3px 3px 5px rgb(35 33 33 / 23%);
-}
-
-.bttn.primary:hover {
-  background: #21a69a;
-  box-shadow: inset 3px 4px 10px rgb(35 33 33 / 40%);
-  /* -webkit-box-shadow: inset 3px 4px 10px rgb(35 33 33 / 40%); */
-}
-
-.bttn.secondary{
-  background: transparent;
-  border: #093C4F 2px solid;
-  color: #0D1D24;
-}
-
-.bttn.secondary:hover {
-  background: #05171f;
-  color: white;
-}
-
-.resource-list {
+.contact-list {
   font-family: Helvetica, Arial, sans-serif;
   font-size: larger;
   text-align: center;
   width: 100%;
 }
 
-.resource-list ul {
+.contact-list ul {
   text-align: left;
   margin: 0 auto;
   list-style: none;
   display: flex;
   justify-content: center;
   padding: 2%;
+  max-width: 1000px;
 }
 
-.resource-list li {
+.contact-list li {
   padding: 2%;
   font-weight: bold;
+  display: block;
+  padding: 2rem;
 }
 
-.resource-list a {
+.contact-list a {
   color: black;
   line-height: 30px;
 }
 
 footer {
-  margin: 0 auto;
-  width: 100%;
+  margin: 30px auto;
+  max-width: 1000px;
   text-align: center;
 }
 
 footer img {
   width: 20px;
+}
+
+a, a:hover, a:visited {
+  color: black;
 }
